[package]
name = "ragtime"
version = "0.1.0"
authors = ["Masahiro Yoshida <mypianoplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-std = { version = "1.9" }
tokio = { version = "1.4.0", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["full"] }
tokio-stream = {version = "0.1.5" }
once_cell = {version = "1.7.2"}